Update title to slide

--- a/_posts/0000-01-02-cyadla3.md
+++ b/_posts/0000-01-02-cyadla3.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to cyadla3's slide!"
 ---
 This is github cyadla3's slide
 Use the left arrow to go back!
