--- a/_posts/0000-01-02-cyadla3.md
+++ b/_posts/0000-01-02-cyadla3.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to cyadla3's slide!"
 ---
-This is github cyadla3's slide
+This is my awesome slide.
 Use the left arrow to go back!
